@@ -1,5 +1,5 @@
 /*
- * Copyright 2014-2021 Andrew Gaul <andrew@gaul.org>
+ * Copyright 2014-2024 Andrew Gaul <andrew@gaul.org>
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -18,12 +18,11 @@ package org.gaul.s3proxy;
 
 import java.util.Set;
 
-import com.google.common.collect.ImmutableSet;
-
 final class Quirks {
     /** Blobstores which do not support blob-level access control. */
-    static final Set<String> NO_BLOB_ACCESS_CONTROL = ImmutableSet.of(
+    static final Set<String> NO_BLOB_ACCESS_CONTROL = Set.of(
             "azureblob",
+            "azureblob-sdk",
             "b2",
             "rackspace-cloudfiles-uk",
             "rackspace-cloudfiles-us",
@@ -31,7 +30,7 @@ final class Quirks {
     );
 
     /** Blobstores which do not support the Cache-Control header. */
-    static final Set<String> NO_CACHE_CONTROL_SUPPORT = ImmutableSet.of(
+    static final Set<String> NO_CACHE_CONTROL_SUPPORT = Set.of(
             "atmos",
             "b2",
             "google-cloud-storage",
@@ -41,18 +40,18 @@ final class Quirks {
     );
 
     /** Blobstores which do not support the Cache-Control header. */
-    static final Set<String> NO_CONTENT_DISPOSITION = ImmutableSet.of(
+    static final Set<String> NO_CONTENT_DISPOSITION = Set.of(
             "b2"
     );
 
     /** Blobstores which do not support the Content-Encoding header. */
-    static final Set<String> NO_CONTENT_ENCODING = ImmutableSet.of(
+    static final Set<String> NO_CONTENT_ENCODING = Set.of(
             "b2",
             "google-cloud-storage"
     );
 
     /** Blobstores which do not support the Content-Language header. */
-    static final Set<String> NO_CONTENT_LANGUAGE = ImmutableSet.of(
+    static final Set<String> NO_CONTENT_LANGUAGE = Set.of(
             "b2",
             "rackspace-cloudfiles-uk",
             "rackspace-cloudfiles-us",
@@ -60,17 +59,18 @@ final class Quirks {
     );
 
     /** Blobstores which do not support the If-None-Match header during copy. */
-    static final Set<String> NO_COPY_IF_NONE_MATCH = ImmutableSet.of(
+    static final Set<String> NO_COPY_IF_NONE_MATCH = Set.of(
             "openstack-swift",
             "rackspace-cloudfiles-uk",
             "rackspace-cloudfiles-us"
     );
 
-    static final Set<String> NO_EXPIRES = ImmutableSet.of(
-            "azureblob"
+    static final Set<String> NO_EXPIRES = Set.of(
+            "azureblob",
+            "azureblob-sdk"
     );
 
-    static final Set<String> NO_LIST_MULTIPART_UPLOADS = ImmutableSet.of(
+    static final Set<String> NO_LIST_MULTIPART_UPLOADS = Set.of(
             "atmos",
             "filesystem",
             "google-cloud-storage",
@@ -81,9 +81,10 @@ final class Quirks {
     );
 
     /** Blobstores which do not allow listing zero keys. */
-    static final Set<String> NO_LIST_ZERO_KEYS = ImmutableSet.of(
+    static final Set<String> NO_LIST_ZERO_KEYS = Set.of(
             "atmos",
-            "azureblob"
+            "azureblob",
+            "azureblob-sdk"
     );
 
     /**
@@ -91,24 +92,29 @@ final class Quirks {
      * require it during complete multipart.  Emulate the former in the latter
      * by storing and retrieving a stub object.
      */
-    static final Set<String> MULTIPART_REQUIRES_STUB = ImmutableSet.of(
+    static final Set<String> MULTIPART_REQUIRES_STUB = Set.of(
             "azureblob",
+            "azureblob-sdk",
             "filesystem",
+            "filesystem-nio2",
             "google-cloud-storage",
             "openstack-swift",
-            "transient"
+            "transient",
+            "transient-nio2"
     );
 
     /** Blobstores with opaque ETags. */
-    static final Set<String> OPAQUE_ETAG = ImmutableSet.of(
+    static final Set<String> OPAQUE_ETAG = Set.of(
             "azureblob",
+            "azureblob-sdk",
             "b2",
             "google-cloud-storage"
     );
 
     /** Blobstores with opaque markers. */
-    static final Set<String> OPAQUE_MARKERS = ImmutableSet.of(
+    static final Set<String> OPAQUE_MARKERS = Set.of(
             "azureblob",
+            "azureblob-sdk",
             // S3 marker means one past this token while B2 means this token
             "b2",
             "google-cloud-storage"
